--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -2,5 +2,66 @@
   "LANG": {
     "UA": "Українська",
     "EN": "Англійська"
+  },
+  "USER": {
+    "NAME": "Ім'я",
+    "USERNAME": "Ім'я користувача",
+    "EMAIL": "Електронна пошта",
+    "PHONE": "Телефон",
+    "WEB_SITE": "Веб-сайт",
+    "STREET": "Вулиця",
+    "SUITE": "Кімната",
+    "CITY": "Місто",
+    "ZIP_CODE": "ЗІП код",
+    "COMPANY_NAME": "Назва компанії",
+    "CATCH_PHRASE": "Ключова фраза",
+    "BS": "Bs",
+    "PERSONAL_INFO": "Особиста інформація",
+    "ADDRESS_INFO": "Інформація про адресу",
+    "COMPANY": "Компанія"
+  },
+  "NAV": {
+    "USERS": "Користувачі",
+    "POSTS": "Пости",
+    "ALBUMS": "Альбоми",
+    "TODOS": "Справи",
+    "USER_DATA": "Дані користувача",
+    "MY_POSTS": "Мої пости",
+    "MY_ALBUMS": "Мої альбоми",
+    "MY_TODOS": "Мої справи",
+    "MY_DATA": "Мої дані"
+  },
+  "BUTTONS": {
+    "BACK": "Назад",
+    "EDIT_ALBUM": "Редагувати альбом",
+    "EDIT_POST": "Редагувати пост",
+    "ADD_ALBUM": "Додати альбом",
+    "ADD_PHOTO": "Додати фото",
+    "ADD_POST": "Додати пост",
+    "ADD_TODO": "Додайте справу",
+    "SAVE_SETTINGS": "Збережіть налаштування",
+    "SHOW_LESS": "Показати менше",
+    "SHOW_MORE": "Показати більше",
+    "EDIT": "Редагувати",
+    "REMOVE": "Видалити"
+  },
+  "TABLE_HEADERS": {
+    "ID": "Id",
+    "STATE": "Стан",
+    "TITLE": "Назва",
+    "ALBUM_TITLE": "Назва альбому",
+    "TEXT": "Текст"
+  },
+  "HEADERS": {
+    "PHOTOS": "Фотографії",
+    "COMMENTS": "Коментарі",
+    "NO_COMMENTS": "Ще немає коментарів"
+  },
+  "BREAD_CRUMBS": {
+    "USERS": "Користувачі",
+    "POSTS": "Пости",
+    "ALBUMS": "Альбоми",
+    "TODOS": "Справи",
+    "USERS_DATA": "Дані користувача"
   }
 }
