add: translates for modals and snackbars

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,7 +43,12 @@
     "SHOW_LESS": "Show less",
     "SHOW_MORE": "Show more",
     "EDIT": "Edit",
-    "REMOVE": "Remove"
+    "REMOVE": "Remove",
+    "CREATE": "Create",
+    "CANCEL": "Cancel",
+    "DELETE": "Delete",
+    "ADD": "Add",
+    "SAVE": "Save"
   },
   "TABLE_HEADERS": {
     "ID": "Id",
@@ -63,5 +68,44 @@
     "ALBUMS": "Albums",
     "TODOS": "Todos",
     "USERS_DATA": "Users data"
+  },
+  "MODAL": {
+    "DELETE_ALBUM": "Delete this Album?",
+    "CREATE_ALBUM": "Create new Album",
+    "CREATE_POST": "Create new post",
+    "DELETE_POST": "Delete this post?",
+    "DELETE_PHOTO": "Delete this Photo?",
+    "ADD_PHOTO": "Add photo",
+    "EDIT_ALBUM": "Edit album",
+    "DELETE_COMMENT": "Delete comment?",
+    "EDIT_POST": "Edit post",
+    "EDIT_TODO": "Edit todo",
+    "CREATE_TODO": "Create new todo",
+    "DELETE_TODO": "Delete this todo?"
+  },
+  "MODAL_FIELDS": {
+    "TITLE": "Enter Title",
+    "POST_BODY": "Enter Post Body",
+    "URL_IMAGE": "Enter Image Url",
+    "URL_THUMB": "Enter Thumbnail Url"
+  },
+  "MODAL_VALIDATION": {
+    "REQUIRED": "Required field",
+    "EMAIL": "Wrong email address"
+  },
+  "MESSAGES": {
+    "TODO_DELETED": "Todo has been deleted",
+    "TODO_CREATED": "Todo has been created",
+    "TODO_EDITED": "Todo has been edited",
+    "ALBUM_DELETED": "Album has been deleted",
+    "ALBUM_CREATED": "Album has been created",
+    "POST_DELETED": "Post has been deleted",
+    "POST_CREATED": "Post has been created",
+    "ALBUM_EDITED": "Album has been edited",
+    "PHOTO_DELETED": "Photo has been deleted",
+    "POST_EDITED": "Post has been edited",
+    "COMMENT_DELETED": "Comment has been deleted",
+    "USER_DATA_EDITED": "User data has been edited",
+    "COMMON_ERROR": "Something wrong..."
   }
 }
