--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -43,7 +43,12 @@
     "SHOW_LESS": "Показати менше",
     "SHOW_MORE": "Показати більше",
     "EDIT": "Редагувати",
-    "REMOVE": "Видалити"
+    "REMOVE": "Видалити",
+    "CREATE": "Створити",
+    "CANCEL": "Скасувати",
+    "DELETE": "Видалити",
+    "ADD": "Додати",
+    "SAVE": "Зберегти"
   },
   "TABLE_HEADERS": {
     "ID": "Id",
@@ -63,5 +68,44 @@
     "ALBUMS": "Альбоми",
     "TODOS": "Справи",
     "USERS_DATA": "Дані користувача"
+  },
+  "MODAL": {
+    "DELETE_ALBUM": "Видалити цей альбом?",
+    "CREATE_ALBUM": "Створити новий альбом",
+    "CREATE_POST": "Створити новий пост",
+    "DELETE_POST": "Видалити цей пост?",
+    "DELETE_PHOTO": "Видалити цю фотографію?",
+    "ADD_PHOTO": "Додати фото",
+    "EDIT_ALBUM": "Редагувати альбом",
+    "DELETE_COMMENT": "Видалити коментар?",
+    "EDIT_POST": "Редагувати пост",
+    "EDIT_TODO": "Редагувати справу",
+    "CREATE_TODO": "Створити нову справу",
+    "DELETE_TODO": "Видалити цю справу?"
+  },
+  "MODAL_FIELDS": {
+    "TITLE": "Введіть назву",
+    "POST_BODY": "Введіть текст поста",
+    "URL_IMAGE": "Введіть URL-адресу зображення",
+    "URL_THUMB": "Введіть URL-адресу ескізу"
+  },
+  "MODAL_VALIDATION": {
+    "REQUIRED": "Обов'язкове поле",
+    "EMAIL": "Неправильна електронна адреса"
+  },
+  "MESSAGES": {
+    "TODO_DELETED": "Справа видалена",
+    "TODO_CREATED": "Справа створена",
+    "TODO_EDITED": "Справа була відредагована",
+    "ALBUM_DELETED": "Альбом видалено",
+    "ALBUM_CREATED": "Альбом створено",
+    "POST_DELETED": "Пост видалено",
+    "POST_CREATED": "Пост створено",
+    "ALBUM_EDITED": "Альбом відредаговано",
+    "PHOTO_DELETED": "Фото було видалено",
+    "POST_EDITED": "Пост відредаговано",
+    "COMMENT_DELETED": "Коментар видалено",
+    "USER_DATA_EDITED": "Дані користувача відредаговано",
+    "COMMON_ERROR": "Щось не так..."
   }
 }
