--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -29,7 +29,8 @@
     "MY_POSTS": "Мої пости",
     "MY_ALBUMS": "Мої альбоми",
     "MY_TODOS": "Мої справи",
-    "MY_DATA": "Мої дані"
+    "MY_DATA": "Мої дані",
+    "MY_CHART": "Статистика"
   },
   "BUTTONS": {
     "BACK": "Назад",
@@ -76,7 +77,9 @@
     "POSTS": "Пости",
     "ALBUMS": "Альбоми",
     "TODOS": "Справи",
-    "USERS_DATA": "Дані користувача"
+    "USERS_DATA": "Дані користувача",
+    "STATISTICS": "Статистика"
+
   },
   "MODAL": {
     "DELETE_ALBUM": "Видалити цей альбом?",
@@ -116,5 +119,9 @@
     "COMMENT_DELETED": "Коментар видалено",
     "USER_DATA_EDITED": "Дані користувача відредаговано",
     "COMMON_ERROR": "Щось не так..."
+  },
+  "CHART": {
+    "TITLE": "Довжина заголовку",
+    "BODY": "Довжина тексту"
   }
 }
